--- a/www/index.html
+++ b/www/index.html
@@ -16,35 +16,39 @@ Yera compiles to javascript.
 Click on the hearts to change the sentence.
 </div><br>
 
-<div><a href = "clock-html.ehwas">an html clock (YERA)</a>
+<div><a href = "clock-html.ehwas">an html clock (YERA)</a> (any browser)
 <br>
 This is a very simple Yera applications
 </div><br>
 
-<div><a href = "gui.ehwas">an example with mouse events(YERA) </a>
+<div><a href = "gui.ehwas">an example with mouse events(YERA) </a> (opera and firefox)
 <br>
 click on icons in the top part, it will update counters in the bottom part.
 </div><br>
 
-<div><a href = "test-query-post.html">a test page for multipart/form-data encoding(EHWAS) </a>
+<div><a href = "test-query-post.html">a test page for multipart/form-data encoding(EHWAS) </a> (any browser)
 <br>
 show the text inserted and the file that is uploaded.
 </div><br>
 
-<div><a href = "test_import.ehwas">a test page of (ehwas-import file)(EHWAS)</a>
+<div><a href = "test_import.ehwas">a test page of (ehwas-import file)(EHWAS)</a> (any browser)
+<br>
 it imports a scheme value from imp.scm and show it.
 </div><br>
 
-<div><a href = "gebo-test.html">a simple page that query a remote echo actor(EHWAS)</a>
+<div><a href = "gebo-test.html">a simple page that query a remote echo actor(GEBO)</a> (any brower)
+<br>
   sends a series of query from browser to server that responds with an echo.
 </div><br>
 
-<div><a href = "chatroom/chatroom.html">a simple chatroom using push tech(GEBO)</a>
+<div><a href = "chatroom/chatroom.html">a simple chatroom using push tech(GEBO)</a> (firefox, opera, chrome)
+<br>
   this is a chatroom that uses push technology (that is named GEBO).
   the program abstraction used to implement this is the actor model.
 </div><br>
 
-<div><a href = "poll/poll.html">a poll system that updates realtime (GEBO + YERA)</a>
+<div><a href = "poll/poll.html">a poll system that updates realtime (GEBO + YERA)</a> (firefox, opera not so much)
+<br>
   this uses GEBO to implement the update of result graph, and
   Yera to implement the graphical user interface.
 </div>
