changed test_1.svg to test-love.ehwas

--- a/www/chatroom/chatroom.html
+++ b/www/chatroom/chatroom.html
@@ -13,6 +13,6 @@
       <div><b class = "nick" id = "nick"></b>
 	<input type = "text" id = "message" onchange = "sendMessage()" width = "60"/>
        </div> 
-    <pre id = "body" style = "text-align:left"/>
+      <div style = "height:200px;width:300px;overflow:auto"><pre id = "body" style = "text-align:left"/></div>
   </body>
 </html>
