--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@ the code is shown in the same page.
 Yera compiles to javascript.
 </div><br>
 
-<div><a href = "test_1.svg">another SVG test (YERA)</a>(only opera or firefox)
+<div><a href = "love-test.ehwas">another SVG test (YERA)</a>(only opera or firefox)
 <br>
 Click on the hearts to change the sentence.
 </div><br>
