perfectionated the transformation of yera from lazy and curried to eager and uncurried language.

--- a/www/poll/poll.html
+++ b/www/poll/poll.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <link rel = "stylesheet" type = "text/css" href = "simple.css"/>
-    <!-- <link rel = "stylesheet" type = "text/css" href = "parrot.css"/> -->
+    <link rel = "stylesheet" type = "text/css" href = "parrot.css"/>
     <script type = "text/ecmascript" src = "/gebo/rts.js"></script>
     <script type = "text/ecmascript" src = "/yera/rts.js"></script>
     <script type = "text/ecmascript" src = "polls.yera?action=code&amp;type=ecmascript"></script>
