--- a/www/test.html
+++ b/www/test.html
@@ -7,15 +7,14 @@
     <script type = "text/ecmascript" src = "test.yera"></script>
     <script type = "text/ecmascript">
     onload = function () {
-    Yera.connect ('Test.main', 'main')
+    Yera.connect (Test.bindings.main, 'main')
     }
     </script>
   </head>
   <body>
     <div>
-    <form><input type = "button" name = "ciao" value = "ciao" onclick = "userevent.fire ('ciao')"/></form>
+    <form><input type = "button" name = "ciao" value = "ciao" onclick = "usereventFire ('ciao')"/></form>
     </div>
     <div id = "main"/>
-
   </body>
 </html>
