--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,19 @@
 <title>Futhark Examples</title>
 </head>
 <body>
+<h2>Futhark Examples</h2>
+<h5>some test examples to show how the system works</h5>
+<h6>Basic Examples about Yera language</h6>
+<div><a href = "clock-html.ehwas">an html clock (YERA)</a> (any browser)
+<br/>
+This is a very simple Yera application, just make a difital clock. Test time behavior
+</div><br/>
+
+<div><a href = "until-test.ehwas"> a simple toggle icon happy/sad (YERA)</a> (only opera and firefox)
+<br/>
+This is another simple Yera app that show how to make time composition using until operator
+</div> <br/>
+
 <div><a href = "clock-svg.ehwas">an SVG clock(YERA)</a>(only opera or firefox)
 <br> 
 this is obtained mixing up svg and xhtml tags.
@@ -16,15 +29,13 @@ Yera compiles to javascript.
 Click on the hearts to change the sentence.
 </div><br>
 
-<div><a href = "clock-html.ehwas">an html clock (YERA)</a> (any browser)
-<br>
-This is a very simple Yera applications
-</div><br>
 
 <div><a href = "gui.ehwas">an example with mouse events(YERA) </a> (opera and firefox)
 <br>
 click on icons in the top part, it will update counters in the bottom part.
 </div><br>
+
+<h6>Some test on standard http behaviors</h6>
 
 <div><a href = "test-query-post.html">a test page for multipart/form-data encoding(EHWAS) </a> (any browser)
 <br>
@@ -36,6 +47,8 @@ show the text inserted and the file that is uploaded.
 it imports a scheme value from imp.scm and show it.
 </div><br>
 
+<h6>Basic Examples on Gebo, the comet technology (push system)</h6>
+
 <div><a href = "gebo-test.html">a simple page that query a remote echo actor(GEBO)</a> (any brower)
 <br>
   sends a series of query from browser to server that responds with an echo.
@@ -46,6 +59,8 @@ it imports a scheme value from imp.scm and show it.
   this is a chatroom that uses push technology (that is named GEBO).
   the program abstraction used to implement this is the actor model.
 </div><br>
+
+<h6>Integration between gebo and yera</h6>
 
 <div><a href = "poll/poll.html">a poll system that updates realtime (GEBO + YERA)</a> (firefox, opera not so much)
 <br>
