--- a/www/test.html
+++ b/www/test.html
@@ -1,6 +1,4 @@
-<?xml version = "1.0" ?>
-
-<html xmlns = "http://www.w3.org/1999/xhtml">
+<html>
   <head>
     <script type = "text/ecmascript" src = "/gebo/rts.js"></script>
     <script type = "text/ecmascript" src = "/yera/rts.js"></script>
