fixed compiled version (to compile gsi make)

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,14 @@
 <body>
 <h2>Futhark Examples</h2>
 <h5>some test examples to show how the system works</h5>
+Note: when I refer to browsers I refer to quite updated releases, 
+particularly I tested the system with<br>
+Firefox 2-3.0-3.1<br>
+Opera 9<br>
+Chrome 0.4.154.29 <br>
+Internet Explorer 7<br>
+Safari 3.2 (windows).<br>
+
 <h6>Basic Examples about Yera language</h6>
 Yera is a functional reactive programming language used to implement user interfaces
 the code follows application.<br><br>
